# singularity

./: .wget-hsts  config.py  documentation.md  requirements.txt
.lightning_studio/singularity/: .gitignore
.lightning_studio/singularity/configs/: model.yaml  serving.yaml  sft.yaml
.lightning_studio/singularity/singularity/: __init__.py  main.py
.lightning_studio/singularity/singularity/alignment/: grpo.py  sampler.py
.lightning_studio/singularity/singularity/data/: __init__.py  datasets.py
.lightning_studio/singularity/tests/: test_loss.py  test_moe_routing.py
config/: __init__.py  data_config.py  model_config.py  training_config.py
data/: __init__.py  collator.py  data_mixer.py  dataset.py  tokenizer.py
modeling/: modeling_qwen.py  rope.py
scripts/: tg_notifier.py
singularity/: README.en.md  README.md  instruction.en.md  instruction.md  main.py  pyproject.toml  requirements.txt  singularity 32B.md
singularity/configs/: base.yaml  debug.yaml  grpo.yaml
singularity/scripts/: export_checkpoint.py  merge_dora.py  run_grpo.py  run_sft.py
singularity/singularity/alignment/: __init__.py  rewards.py
singularity/singularity/data/: batch.py  preprocessing.py  tokenization.py
singularity/singularity/model/: attention.py  config.py  moe.py  transformer.py
singularity/singularity/serving/: __init__.py  search.py
singularity/singularity/training/: state.py  train_sft.py
singularity/singularity/utils/: __init__.py  tpu.py
singularity/tests/: test_batch.py  test_rope.py
tests/: test_qwen_base.py  torch_reference.py
training/: checkpoint.py
(+17 files in other folders)
