[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "singularity-32b"
version = "0.1.0"
description = "JAX/Flax MoE transformer research project for Kaggle TPU"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Singularity Team" }]
dependencies = [
  "jax[tpu]>=0.4.30",
  "flax>=0.8.0",
  "optax>=0.2.0",
  "orbax-checkpoint>=0.6.0",
  "numpy>=1.26",
  "polars>=0.20",
  "pyarrow>=14",
  "datasets>=2.18",
  "tiktoken>=0.6",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "rich>=13.7",
  "huggingface_hub>=0.22",
  "transformers>=4.40",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pydantic>=2.6",
  "pytest>=8.0"
]

[project.scripts]
singularity = "singularity.main:main"

[tool.setuptools.packages.find]
include = ["singularity*"]

[tool.ruff]
line-length = 100
target-version = "py310"
lint.select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
